--- a/one.grrrau.co/testIndex.html
+++ b/one.grrrau.co/testIndex.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<div style="width: 500; margin: auto;margin-top: 10%;text-align: center;font-size: 30;font-family: Arial;font-weight: 700;">
-			Hola Caracola!
+			one.grrrau.co
 			<br><br>
 
 			<img src="https://media.giphy.com/media/vmv47p4zksWDC/source.gif" alt="">
