--- a/www.grrrau.co/public/index.html
+++ b/www.grrrau.co/public/index.html
@@ -103,7 +103,7 @@
 						</a>
 					</div>
 					<div style="margin-left:550px;" id="about">
-						<a class="about" href="http://blog.graupuche.info/about/">ABOUT</a>
+						<a class="about" href="http://blog.graupuche.info/">BLOG</a>
 						<br>
 					</div>
 					<div id="blog">
