--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -13,17 +13,27 @@
 	<div id="wrapper">
 		<div class="msgs">
 			<div class="sentMsgs">
-				<div class="bigMsg" style="margin:auto;">
-					This is a very simple game, this is
-					<em>Chat Charades</em>. It plays exactly like Charades but here you can't talk at all, even if you do.
-					<br>
-					<br> Just act the word in front of the camera and try that whoever is on the other side gets the word right!
-					<br>
-					<br> But hurry! you only have 30 seconds.
+				<div>
+					<div style="margin: 10px;
+					margin-top: 45px;
+					border-radius: 25px;
+					background: #8539a8;
+					padding: 20px; 
+					min-height: 40px;
+					font-size: 25px;
+					box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 23px 0 rgba(0, 0, 0, 0.19);">
+						This is a very simple game, this is
+						<em>Chat Charades</em>. It plays exactly like Charades but here you can't talk at all, even if you do.
+						<br>
+						<br> Just act the word in front of the camera and try that whoever is on the other side gets the word right!
+						<br>
+						<br> But hurry! you only have 30 seconds.
+					</div>
 				</div>
 				<br>
 				<br>
 				<br>
+
 				<div class="smallBox" style="width:100%; text-align:center; margin: auto;">
 					<a href="http://two.grrrau.co/indexReceiver.html" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:150px; text-align:center;">
