--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -40,7 +40,7 @@
 							ACTING
 						</div>
 					</a>
-					<a href="http://two.grrrau.co/indexSenderer.html" style="color: #f0f0f0;">
+					<a href="http://two.grrrau.co/indexSender.html" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:150px; text-align:center;">
 							GUESSING
 						</div>
