--- a/two.grrrau.co/public/indexMirror.html
+++ b/two.grrrau.co/public/indexMirror.html
@@ -14,9 +14,49 @@
     <div class="mirror">
       <video id="video" autoplay></video>
     </div>
-<div class="bigMsg">
-  WORD TO BE GUESSED
-</div>
+
+    <div id="" style="
+    font-size:35px;
+    position: absolute;
+          top:78.5%;
+    left:calc( 50% - 335px);
+    ">
+      the word to act out is...
+    </div>
+    <div class="bigMsg" style="
+      position:absolute; 
+            top:79%;
+      left:calc( 50% - 370px);
+      margin: 10px;
+      margin-top: 45px;
+      border-radius: 25px;
+      background: #8539a8;
+      padding: 20px;
+      min-height: 60px;
+      width:700px;
+      font-size: 50px;
+      display: inline-block;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 23px 0 rgba(0, 0, 0, 0.19);
+      color:#f0f0f0;
+      text-align:center;
+    ">
+      <strong> LIZARD </strong>
+    </div>
+
+    <div class="guesses">
+      <div id="" style="
+        font-size:25px;
+        position: absolute;
+              top:88.5%;
+        left:calc( 50% + 215px);
+        ">
+        the guess is...
+      </div>
+      <div class="givenGuess">
+        cat
+      </div>
+
+    </div>
   </div>
   </div>
 
