--- a/two.grrrau.co/public/indexMirror.html
+++ b/two.grrrau.co/public/indexMirror.html
@@ -40,7 +40,7 @@
       color:#f0f0f0;
       text-align:center;
     ">
-      <strong> LIZARD </strong>
+      <strong> lizard </strong>
     </div>
 
     <div class="guesses">
