--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -35,13 +35,19 @@
 				<br>
 
 				<div class="smallBox" style="width:100%; text-align:center; margin: auto;">
-					<a href="http://two.grrrau.co/indexReceiver.html" style="color: #f0f0f0;">
-						<div class="smallMsg" style="width:150px; text-align:center;">
+					<div style="color:black;font-size:25px;">
+						<br>
+						<br> What are you playing as?
+						<br>
+						<br>
+					</div>
+					<a href="indexReceiver.html" style="color: #f0f0f0;">
+						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							ACTING
 						</div>
 					</a>
-					<a href="http://two.grrrau.co/indexSender.html" style="color: #f0f0f0;">
-						<div class="smallMsg" style="width:150px; text-align:center;">
+					<a href="indexSender.html" style="color: #f0f0f0;">
+						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							GUESSING
 						</div>
 					</a>
