--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>MSG CHOICE</title>
+	<title>CHOICE</title>
 	<link rel="stylesheet" href="assets/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -41,7 +41,8 @@
 						<br>
 						<br>
 					</div>
-					<a href="indexReceiver.html" style="color: #f0f0f0;">
+					<a href="indexReceiver.html" href="#" onclick="window.open('indexReceiver.html');
+					window.open('indexMirror.html'');" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							ACTING
 						</div>
