--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -41,7 +41,7 @@
 						<br>
 						<br>
 					</div>
-					<a href="indexReceiver.html" href="#" onclick="window.open('indexReceiver.html');
+					<a href="#" onclick="window.open('indexReceiver.html');
 					window.open('indexMirror.html');" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							ACTING
