--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -41,8 +41,8 @@
 						<br>
 						<br>
 					</div>
-					<a href="#" onclick="window.open('indexReceiver.html');
-					window.open('indexMirror.html');" style="color: #f0f0f0;">
+					<a href="#" onclick="window.open('https://two.grrrau.co/indexReceiver.html');
+					window.open('https://two.grrrau.co/indexMirror.html');" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							ACTING
 						</div>
