--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -47,7 +47,7 @@
 							ACTING
 						</div>
 					</a>
-					<a href="indexSender.html" style="color: #f0f0f0;">
+					<a href="https://two.grrrau.co/indexSender.html" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							GUESSING
 						</div>
