--- a/two.grrrau.co/public/indexLive.html
+++ b/two.grrrau.co/public/indexLive.html
@@ -11,14 +11,40 @@
 
 <body>
   <div id="wrapper">
-    <div class="live">
+    <!-- <div class="live">
       <video id="remote" autoplay></video>
-    </div>
-  </div>
+	</div> -->
+	
+	
+	<div id="vid-box"></div>
+	<form name="loginForm" id="login" action="#" onsubmit="return login(this);">
+		<input type="text" name="username" id="username" placeholder="Pick a username!" />
+		<input type="submit" name="login_submit" value="Log In">
+	</form>
+	<form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
+	 <input type="text" name="number" placeholder="Enter user to dial!" />
+	 <input type="submit" value="Call"/>
+	</form>
+	
+	
+
+
+
+</div>
   </div>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="js/mainLive.js"></script>
+  <script src="js/mainMirror.js"></script>
 
 </body>
 
 </html>
+
+<div id="vid-box"></div>
+<form name="loginForm" id="login" action="#" onsubmit="return login(this);">
+    <input type="text" name="username" id="username" placeholder="Pick a username!" />
+    <input type="submit" name="login_submit" value="Log In">
+</form>
+<form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
+ <input type="text" name="number" placeholder="Enter user to dial!" />
+ <input type="submit" value="Call"/>
+</form>
