--- a/two.grrrau.co/public/indexMirror.html
+++ b/two.grrrau.co/public/indexMirror.html
@@ -6,6 +6,8 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+  <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
+  <script src="http://cdn.pubnub.com/webrtc/webrtc.js"></script>
   <!-- <script src="js/mainMirror.js"></script> -->
 </head>
 
@@ -63,6 +65,7 @@
 
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/mainMirror.js"></script>
+  <script src="js/mainLive.js"></script>
 
 </body>
 
