--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -42,7 +42,7 @@
 						<br>
 					</div>
 					<a href="#" onclick="window.open('https://two.grrrau.co/indexReceiver.html');
-					window.open('https://two.grrrau.co/indexMirror.html');" style="color: #f0f0f0;">
+					window.open('https://two.grrrau.co/indexMirror.html/init#');" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							ACTING
 						</div>
