--- a/two.grrrau.co/public/indexLive.html
+++ b/two.grrrau.co/public/indexLive.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
-  <div id="wrapper">
-    <!-- <div class="live">
+  <div id="wrapper"> 
+    <div class="live">
       <video id="remote" autoplay></video>
-    </div> -->
-  
-</div>
+    </div>
+  </div>
   </div>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/mainMirror.js"></script>
@@ -23,13 +22,3 @@
 </body>
 
 </html>
-
-<div id="vid-box"></div>
-<form name="loginForm" id="login" action="#" onsubmit="return login(this);">
-    <input type="text" name="username" id="username" placeholder="Pick a username!" />
-    <input type="submit" name="login_submit" value="Log In">
-</form>
-<form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
- <input type="text" name="number" placeholder="Enter user to dial!" />
- <input type="submit" value="Call"/>
-</form>
