peer is connecting

--- a/two.grrrau.co/public/indexMirror.html
+++ b/two.grrrau.co/public/indexMirror.html
@@ -59,21 +59,8 @@
     </div>
   </div>
   </div>
-
-  <div style="display:none;">
-      <label>Your ID:</label><br/>
-      <textarea id="yourId"></textarea><br/>
-      <label>Other ID:</label><br/>
-      <textarea id="otherId"></textarea>
-      <button id="connect">connect</button><br/>
-
-      <label>Enter Message:</label><br/>
-      <textarea id="yourMessage"></textarea>
-      <button id="send">send</button>
-      <pre id="messages"></pre>
-  </div>
-
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+  <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
   <script src="js/mainMirror.js"></script>
 </body>
 
