--- a/two.grrrau.co/public/indexLive.html
+++ b/two.grrrau.co/public/indexLive.html
@@ -12,7 +12,7 @@
 <body>
   <div id="wrapper"> 
     <div class="live">
-      <video id="video" autoplay></video>
+      <video id="remote" autoplay></video>
     </div>
   </div>
   </div>
