--- a/two.grrrau.co/public/indexLive.html
+++ b/two.grrrau.co/public/indexLive.html
@@ -17,9 +17,8 @@
   </div>
   </div>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
+  <script src="js/peer.js"></script>
   <script src="js/mainLive.js"></script>
 
 </body>
-
 </html>
