--- a/two.grrrau.co/public/indexMirror.html
+++ b/two.grrrau.co/public/indexMirror.html
@@ -60,7 +60,7 @@
   </div>
   </div>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
+  <script src="js/peer.js"></script>
   <script src="js/mainMirror.js"></script>
 </body>
 
