--- a/two.grrrau.co/public/indexMirror.html
+++ b/two.grrrau.co/public/indexMirror.html
@@ -40,7 +40,10 @@
       color:#f0f0f0;
       text-align:center;
     ">
-      <strong> lizard </strong>
+      <strong>
+        <div id="word2guess">test</div>
+        <div id="hidden">NEXT WORD IS...</div>
+      </strong>
     </div>
 
     <div class="guesses">
