--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-	<script src="js/mainSender.js"></script>
+	<script src="js/sender.js"></script>
 </head>
 
 <body>
@@ -41,14 +41,14 @@
 						<br>
 						<br>
 					</div>
-					<a href="#" onclick="window.open('https://two.grrrau.co/indexReceiver.html');
-					window.open('https://two.grrrau.co/indexMirror.html');" style="color: #f0f0f0;">
+					<a href="#" onclick="window.open('receiver.html');
+					window.open('mirror.html');" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							ACTING
 						</div>
 					</a>
-					<a href="#" onclick="window.open('https://two.grrrau.co/indexSender.html');
-					window.open('https://two.grrrau.co/indexLive.html');" style="color: #f0f0f0;">
+					<a href="#" onclick="window.open('sender.html');
+					window.open('live.html');" style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
 							GUESSING
 						</div>
