--- a/two.grrrau.co/public/mirror.html
+++ b/two.grrrau.co/public/mirror.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-  <!-- <script src="js/mainMirror.js"></script> -->
+  <!-- <script src="js/mirror.js"></script> -->
 </head>
 
 <body>
@@ -64,7 +64,7 @@
   </div>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/peer.js"></script>
-  <script src="js/mainMirror.js"></script>
+  <script src="js/mirror.js"></script>
 </body>
 
 </html>
