--- a/two.grrrau.co/public/admin.html
+++ b/two.grrrau.co/public/admin.html
@@ -1,10 +1,18 @@
 <html>
-	<head>
-		<title>ADMIN</title>
-		<link rel="stylesheet" href="assets/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-		<script src="js/admin.js"></script>
-	</head>
+
+<head>
+	<title>ADMIN</title>
+	<link rel="stylesheet" href="assets/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+	<script src="js/admin.js"></script>
+</head>
+
+<body>
+	<div id="wrapper">
+		<input type="range" min="1" max="150" step="1">
+	</div>
+</body>
+
 </html>
