--- a/two.grrrau.co/public/index.html
+++ b/two.grrrau.co/public/index.html
@@ -13,23 +13,9 @@
 	<div id="wrapper">
 		<div class="msgs">
 			<div class="sentMsgs">
-				<div>
-					<div style="margin: 10px;
-					margin-top: 45px;
-					border-radius: 25px;
-					background: #8539a8;
-					padding: 20px; 
-					min-height: 40px;
-					font-size: 25px;
-					box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 23px 0 rgba(0, 0, 0, 0.19);">
-						This is a very simple game, this is
-						<em>Chat Charades</em>. It plays exactly like Charades but here you can't talk at all, even if you do.
-						<br>
-						<br> Just act the word in front of the camera and try that whoever is on the other side gets the word right!
-						<br>
-						<br> But hurry! you only have 30 seconds.
-					</div>
-				</div>
+				<br>
+				<br>
+				<br>
 				<br>
 				<br>
 				<br>
@@ -41,16 +27,29 @@
 						<br>
 						<br>
 					</div>
-					<a href="#" onclick="window.open('receiver.html');
-					window.open('mirror.html');" style="color: #f0f0f0;">
+					<a href='receiver.html' style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
-							ACTING
+							receiver
 						</div>
 					</a>
-					<a href="#" onclick="window.open('sender.html');
-					window.open('live.html');" style="color: #f0f0f0;">
+					<a href='mirror.html' style="color: #f0f0f0;">
 						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
-							GUESSING
+							mirror
+						</div>
+					</a>
+					<a href='sender.html' style="color: #f0f0f0;">
+						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
+							sender
+						</div>
+					</a>
+					<a href='live.html' style="color: #f0f0f0;">
+						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
+							live
+						</div>
+					</a>
+					<a href='#'	onclick="window.open('admin.html','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=310,height=400');" style="color: #f0f0f0;">
+						<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;">
+							admin
 						</div>
 					</a>
 				</div>
