--- a/two.grrrau.co/public/admin.html
+++ b/two.grrrau.co/public/admin.html
@@ -11,7 +11,10 @@
 
 <body>
 	<div id="wrapper">
-		<input type="range" min="1" max="150" step="1">
+		<div class="smallMsg" style="width:250px; text-align:center; border-radius:25px;" >
+			<input id="wordSlider" type="range" min="1" max="150" step="1" style="width:230px;"oninput="rangevalue.value=value"/>
+			<div id="word"><output id="rangevalue">50</output></div>
+		</div>
 	</div>
 </body>
 
