--- a/two.grrrau.co/public/admin.html
+++ b/two.grrrau.co/public/admin.html
@@ -11,8 +11,8 @@
 
 <body>
 	<div id="wrapper">
-		<div class="smallMsg" style="width:250px; text-align:right; border-radius:25px;">
-			<input id="wordSlider" type="range" min="1" max="150" step="1" style="width:230px;" oninput="rangevalue.value=value" />
+		<div class="smallMsg" style="width:80%; margin:calc( 10% - 20px);text-align:right; border-radius:25px; position:relative;" >
+			<input id="wordSlider" type="range" min="1" max="150" step="1" style="width:100%;" oninput="rangevalue.value=value" />
 			<div id="word">
 				<output id="rangevalue" style="width:63px;" >76</output>
 				<div class="smallMsg" id="button" onclick="slider()" style="width:50px;border-radius:25px; padding:0px; background: #8539a8; position:relative; top:20px;"></div>
