--- a/two.grrrau.co/public/receiver.html
+++ b/two.grrrau.co/public/receiver.html
@@ -43,19 +43,38 @@
 						I'm just filling up space here
 					</div>
 				</div>
-				<div class="bigBox">
+				<!-- <div class="bigBox">
 					<div class="bigMsg">
 						this is a very simple game, this is
 						<em>Chat Charades</em>. It plays exactly like Charades but here you can't talk at all, even if you do.
 						<br>
 						<br> Just act the word in front of the camera and try that whoever is on the other side gets the word right!
-						<br>
-						<br> But hurry! you only have 30 seconds.
+					</div>
+				</div> -->
+				<div class="bigBox">
+					<div class="bigMsg">
+						airplane
 					</div>
 				</div>
+				<div class="smallBox">
+					<div class="receivedBox">
+						<div class="received">
+							<img src="https://media.giphy.com/media/xT8qBunBN9HDmaur1C/giphy-tumblr.gif" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="smallBox">
+					<div class="receivedBox">
+						<div class="receivedTxt">
+							you went sky high with this one
+						</div>
+					</div>
+				</div>
+
+
+
 			</div>
 		</div>
-	</div>
 </body>
 
 </html>
