scroll properly working

--- a/two.grrrau.co/public/mirror.html
+++ b/two.grrrau.co/public/mirror.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="wrapper">
+  <div id="wrapper" style="padding:0;">
     <div class="mirror">
       <video id="video" autoplay></video>
     </div>
