all getting puns

--- a/two.grrrau.co/public/receiver.html
+++ b/two.grrrau.co/public/receiver.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class="smallBox">
 					<div class="smallMsg">
-						don't be shy
+						Don't be shy
 					</div>
 				</div>
 				<div class="smallBox">
@@ -45,7 +45,7 @@
 				</div>
 				<div class="bigBox">
 					<div class="bigMsg">
-						this is a very simple game, this is
+						This is a very simple game, this is
 						<em>Chat Charades</em>. It plays exactly like Charades but here you can't talk at all, even if you do.
 						<br>
 						<br> Just act the word in front of the camera and try that whoever is on the other side gets the word right!
