--- a/two.grrrau.co/public/live.html
+++ b/two.grrrau.co/public/live.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="wrapper"> 
+  <div id="wrapperRemote"style="padding:0;"> 
     <div class="live">
       <video id="remote" autoplay></video>
     </div>
