--- a/two.grrrau.co/public/admin.html
+++ b/two.grrrau.co/public/admin.html
@@ -10,21 +10,54 @@
 </head>
 
 <body>
-	<div id="wrapper">
+	<div id="wrapperRemote">
 		<div class="smallMsg" style="width:80%; margin:calc( 10% - 20px);text-align:right; border-radius:25px; position:relative;">
+			<div id="word2" style="width:100%;text-align:center; font-size: 80px;">
+				test
+
+			</div>
+		</div>
+		<div class="smallMsg" style="width:35%; margin-left:calc( 10% - 20px);text-align:right; border-radius:25px; position:relative; background:none; box-shadow:none;">
+			<div class="smallMsg" id="button" onclick="slider()" style="width:343.344px;height:343.344px;border-radius:171.672px; margin:0; padding:0px; background: #601b80; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 17px 0 rgba(0, 0, 0, 0.19);">
+				<div id="word2" style="width:100%;text-align:center;font-size: 140px;    margin-top: 83px;
+				">
+					🤷‍
+				</div>
+			</div>
+
+		</div>
+		<div class="smallMsg" style="width:35%; margin-left:calc(  6% - 15px);text-align:right; border-radius:25px; position:relative; background:none; box-shadow:none;">
+			<div class="smallMsg" id="button" onclick="slider()" style="width:343.344px;height:343.344px;border-radius:171.672px; margin:0; padding:0px; background: #601b80; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 17px 0 rgba(0, 0, 0, 0.19);">
+				<div id="word2" style="width:100%;text-align:center;font-size: 140px;    margin-top: 83px;
+				">
+					👍
+				</div>
+			</div>
+		</div>
+		<div class="smallMsg" style="width:80%; margin:calc( 10% - 20px);text-align:right; border-radius:25px; position:relative;    background: #601b80;">
+			<div id="word2" style="width:100%;text-align:center;">
+				<br>DELETE MESSAGES
+				<br>
+				<br>
+			</div>
+		</div>
+		<div class="smallMsg" style="width:80%; margin:calc( 10% - 20px); margin-top:0;text-align:right; border-radius:25px; position:relative; top: -25px;">
+
 			<br>
 			<input id="wordSlider" type="range" min="1" max="150" step="1" style="width:100%;" oninput="rangevalue.value=value" />
 			<div id="word">
 				<br>
 				<br>
 				<output id="rangevalue" style="width:63px;">76</output>
-				<div class="smallMsg" id="button" onclick="slider()" style="width:80px;height:80px;border-radius:40px; padding:0px; background: #8539a8; position:relative; top:20px;"></div>
+				<div class="smallMsg" id="button" onclick="slider()" style="width:80px;height:80px;border-radius:40px; padding:0px; background: #601b80; position:relative; top:20px;"></div>
 				<br>
 				<br>
 			</div>
-
 		</div>
+	</div>
 	</div>
 </body>
 
 </html>
+
+<!-- background:none; -->
