--- a/two.grrrau.co/public/admin.html
+++ b/two.grrrau.co/public/admin.html
@@ -12,13 +12,12 @@
 <body>
 	<div id="wrapperRemote">
 		<div class="smallMsg" style="width:80%; margin:calc( 10% - 20px);text-align:right; border-radius:25px; position:relative;">
-			<div id="word2" style="width:100%;text-align:center; font-size: 80px;">
+			<div id="current" style="width:100%;text-align:center; font-size: 80px;">
 				test
-
 			</div>
 		</div>
 		<div class="smallMsg" style="width:35%; margin-left:calc( 10% - 20px);text-align:right; border-radius:25px; position:relative; background:none; box-shadow:none;">
-			<div class="smallMsg" id="button" onclick="slider()" style="width:343.344px;height:343.344px;border-radius:171.672px; margin:0; padding:0px; background: #601b80; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 17px 0 rgba(0, 0, 0, 0.19);">
+			<div class="smallMsg" id="button" onclick="tooHard()" style="width:343.344px;height:343.344px;border-radius:171.672px; margin:0; padding:0px; background: #601b80; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 17px 0 rgba(0, 0, 0, 0.19);">
 				<div id="word2" style="width:100%;text-align:center;font-size: 140px;    margin-top: 83px;
 				">
 					🤷‍
@@ -27,7 +26,7 @@
 
 		</div>
 		<div class="smallMsg" style="width:35%; margin-left:calc(  6% - 15px);text-align:right; border-radius:25px; position:relative; background:none; box-shadow:none;">
-			<div class="smallMsg" id="button" onclick="slider()" style="width:343.344px;height:343.344px;border-radius:171.672px; margin:0; padding:0px; background: #601b80; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 17px 0 rgba(0, 0, 0, 0.19);">
+			<div class="smallMsg" id="button" onclick="goodEnough()" style="width:343.344px;height:343.344px;border-radius:171.672px; margin:0; padding:0px; background: #601b80; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 10px 17px 0 rgba(0, 0, 0, 0.19);">
 				<div id="word2" style="width:100%;text-align:center;font-size: 140px;    margin-top: 83px;
 				">
 					👍
