--- a/lligam.grrrau.co/ws/public/index.html
+++ b/lligam.grrrau.co/ws/public/index.html
@@ -20,7 +20,8 @@
             text-align: left;
             font-size: 50px;
         }
-        hr{
+
+        hr {
             margin-bottom: 100px;
         }
     </style>
@@ -39,11 +40,7 @@
         <tr>
             <th>ESP8266</th>
         </tr>
-        <tr>
-            <td id="con">CONNECTED</td>
-        </tr>
-        <tr>
-            <td id="dis">DISCONNECTED</td>
+        <td id="connection">DISCONNECTED</td>
         </tr>
     </table>
     <br>
