[ws] add - server status

--- a/lligam.grrrau.co/ws/public/index.html
+++ b/lligam.grrrau.co/ws/public/index.html
@@ -40,7 +40,12 @@
         <tr>
             <th>ESP8266</th>
         </tr>
-        <td id="connection">DISCONNECTED</td>
+        <td id="connection">OFFLINE</td>
+        </tr>
+        <tr>
+            <th>SERVER</th>
+        </tr>
+        <td id="connection">OFFLINE</td>
         </tr>
     </table>
     <br>
