[ws] change - table ID

--- a/lligam.grrrau.co/ws/public/index.html
+++ b/lligam.grrrau.co/ws/public/index.html
@@ -40,12 +40,12 @@
         <tr>
             <th>ESP8266</th>
         </tr>
-        <td id="connection">OFFLINE</td>
+        <td id="espStatus">OFFLINE</td>
         </tr>
         <tr>
             <th>SERVER</th>
         </tr>
-        <td id="connection">OFFLINE</td>
+        <td id="serverStatus">OFFLINE</td>
         </tr>
     </table>
     <br>
