[ws] add - parsing and diplaying json

--- a/lligam.grrrau.co/ws/public/index.html
+++ b/lligam.grrrau.co/ws/public/index.html
@@ -40,12 +40,12 @@
         <tr>
             <th>ESP8266</th>
         </tr>
-        <td id="espStatus">OFFLINE</td>
+        <td id="espStatus">offline</td>
         </tr>
         <tr>
             <th>SERVER</th>
         </tr>
-        <td id="serverStatus">OFFLINE</td>
+        <td id="serverStatus">offline</td>
         </tr>
     </table>
     <br>
@@ -65,7 +65,7 @@
         </tr>
         <tr>
             <td id="k">K,
-                <strong>LOW</strong>
+                <strong>false</strong>
             </td>
         </tr>
     </table>
