--- a/lligam.grrrau.co/ws/public/index.html
+++ b/lligam.grrrau.co/ws/public/index.html
@@ -31,7 +31,7 @@
             margin-bottom: 100px;
         }
         
-        #serverHeader {
+        #serverHeader, #serverStatus, #espHeader, #espStatus{
             color: red
         }
 
